--- a/index.html
+++ b/index.html
@@ -460,6 +460,70 @@
 </div> -->
 
 <!--END modal-->
+
+
+<!--mobile MENU -->
+
+<div class="menu-container">
+    <button class="modal-close" type="button">
+        <svg class="modal-svg-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+    </button>
+    
+    <ul class="mobile-nav-list">
+        <li class="mobile-menu-item">
+            <a class="mobile-nav-link current" href="./index.html">Studio</a>
+        </li>
+        <li class="mobile-menu-item">
+            <a class="mobile-nav-link" href="">Portfolio</a>
+        </li>
+        <li class="mobile-menu-item">
+            <a class="mobile-nav-link" href="">Contacts</a>  
+        </li>
+    </ul>
+
+    <ul class="mobile-address-list">
+        <li class="mobile-address-item"><a class="mobile-address-link accent" href="mailto:info@devstudio.com" target="_blank">info@devstudio.com</a></li>
+        <li class="mobile-address-item"><a class="mobile-address-link" href="tel:+110001111111" target="_blank">+11 (000) 111-11-11</a></li>
+    </ul>
+
+    <ul class="sm-mobile-list">
+        <li class="icon-sm-mobile">
+            <a class="sm-mobile-link" href="" target="_blank">
+            <svg class="svg-item-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+            </a>
+        </li>
+        <li class="icon-sm-mobile">
+            <a class="sm-mobile-link" href="" target="_blank">
+            <svg class="svg-item-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-twiter"></use>
+            </svg>
+            </a>
+        </li>
+        <li class="icon-sm-mobile">
+            <a class="sm-mobile-link" href="" target="_blank">
+            <svg class="svg-item-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+            </a>
+        </li>
+        <li class="icon-sm-mobile">
+            <a class="sm-mobile-link" href="" target="_blank">
+            <svg class="svg-item-footer" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+            </a>
+        </li>
+    </ul>
+</div>
+
+
+<!-- END mobile MENU -->
+
+
    </body>
  
 </html>
