finish mobile menu

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         <a class="nav-link active" href="./index.html">Studio</a>
                     </li>
                     <li>
-                        <a class="nav-link active" href="">Portfolio</a>
+                        <a class="nav-link" href="">Portfolio</a>
                     </li>
                     <li>
-                        <a class="nav-link active" href="">Contacts</a>  
+                        <a class="nav-link" href="">Contacts</a>  
                     </li>
                 </ul>
             </nav>
@@ -464,7 +464,7 @@
 
 <!--mobile MENU -->
 
-<div class="menu-container">
+<div class="menu-container is-open">
     <button class="modal-close" type="button">
         <svg class="modal-svg-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
@@ -489,30 +489,30 @@
     </ul>
 
     <ul class="sm-mobile-list">
-        <li class="icon-sm-mobile">
-            <a class="sm-mobile-link" href="" target="_blank">
-            <svg class="svg-item-footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
+        <li class="icon-sm">
+            <a class="sm-link" href="" target="_blank">
+            <svg class="svg-item-team" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
             </svg>
             </a>
         </li>
-        <li class="icon-sm-mobile">
-            <a class="sm-mobile-link" href="" target="_blank">
-            <svg class="svg-item-footer" width="24" height="24">
+        <li class="icon-sm">
+            <a class="sm-link" href="" target="_blank">
+            <svg class="svg-item-team" width="24" height="24">
                 <use href="./images/icons.svg#icon-twiter"></use>
             </svg>
             </a>
         </li>
-        <li class="icon-sm-mobile">
-            <a class="sm-mobile-link" href="" target="_blank">
-            <svg class="svg-item-footer" width="24" height="24">
+        <li class="icon-sm">
+            <a class="sm-link" href="" target="_blank">
+            <svg class="svg-item-team" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
             </a>
         </li>
-        <li class="icon-sm-mobile">
-            <a class="sm-mobile-link" href="" target="_blank">
-            <svg class="svg-item-footer" width="24" height="24">
+        <li class="icon-sm">
+            <a class="sm-link" href="" target="_blank">
+            <svg class="svg-item-team" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
             </a>
