--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
     </footer> 
 
 <!--START modal-->
-
-<!-- <div class="backdrop is-open">
+<!-- 
+<div class="backdrop is-open">
     <div class="modal">
         <button class="modal-close" type="button">
             <svg class="modal-svg-close" width="8" height="8">
