--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     </footer> 
 
 <!--START modal-->
-<!-- 
+
 <div class="backdrop is-open">
     <div class="modal">
         <button class="modal-close" type="button">
@@ -505,14 +505,13 @@
         </form>
     </div>
 
-</div> -->
+</div> 
 
 <!--END modal-->
 
 
 <!--mobile MENU -->
-
-<!-- <div class="menu-container is-open">
+ <div class="menu-container is-ope">
     <button class="modal-close" type="button">
         <svg class="modal-svg-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
@@ -567,7 +566,6 @@
         </li>
     </ul>
 </div>
- -->
 
 <!-- END mobile MENU -->
 
