--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
 
 <!--mobile MENU -->
- <div class="menu-container is-ope">
+ <div class="menu-container is-open">
     <button class="modal-close" type="button">
         <svg class="modal-svg-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
